--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Shawn Gu's Resume</title>
   </head>
-<div >
-  <body>
+  <body class="bgstyle">
 
     <div class="ulnavi">
       <ul>
@@ -24,5 +23,4 @@
     </div>
 
   </body>
-  </div>
 </html>
