--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bgstyle">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href = "css/stylesheet.css">
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
     <title>Shawn Gu's Resume</title>
   </head>
-  <body class="bgstyle">
+  <body>
 
     <div class="ulnavi">
       <ul>
