Added github link

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>Shawn Gu's Resume</title>
   </head>
   <body>
-
     <div class="ulnavi">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="http://www.google.com">Projects</a></li>
-        <li><a href="http://www.youtube.com">Contact</a></li>
+        <li>
+          <a href="https://github.com/shhhawn9">
+            <img src="css/image/github_logo_gray.png" width="40" height="40">
+          </a>
+        </li>
       </ul>
     </div>
 
