Added scroll down

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Shawn Gu's Resume</title>
   </head>
   <body>
+    <!--top right corner-->
     <div class="ulnavi">
       <ul>
         <li>
@@ -17,10 +18,53 @@
         </li>
       </ul>
     </div>
+    <!--top right corner end-->
+
     <div class="top-container">
       <h1>Shawn Gu</h1>
       <h5>A Computer Science Student</h5>
+      <h5>Seeking for Software Development Intern</h5>
     </div>
 
+      <div class=".i--container">
+        <div class="scrollcontainer">
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          <div class="chevron"></div>
+          <span class="text">Scroll down</span>
+        </div>
+      </div>
+  
+    <div class="mid-container">
+      <div class="profile">
+        <img src="" alt="">
+        <h2>Hello.</h2>
+        <p>1233211123321</p>
+      </div>
+    
+      <hr>
+      <div class="skills">
+        <h3>My Skills</h3>
+        <div class="skill-row">
+          <img class="code-img" src="xxx" alt="code-img">
+          <h3>Design & Development</h3>
+          <p>I started learning to code...</p>
+        </div>
+
+        <div class="skill-row">
+          <img class="chilli-img" src="..." alt="chillies-img">
+          <h3>Hot Wings Challenge</h3>
+          <p>But my best skill</p>
+        </div>
+      </div>
+
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h4>If you love hot wings as much as I do.</h4>
+        <p class="contact-message">Love hot wings,,,</p>
+        <a class="btn" href="mailto:shawn.gu.92@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
   </body>
 </html>
