--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
       <h1>Shawn Gu</h1>
       <h5>A Computer Science Student</h5>
       <h5>Seeking for Software Development Intern</h5>
+      
     </div>
-
+    <div class="scroll-wrapper">
       <div class=".i--container">
         <div class="scrollcontainer">
           <div class="chevron"></div>
           <div class="chevron"></div>
           <div class="chevron"></div>
-          <span class="text">Scroll down</span>
         </div>
+        <span class="text">Scroll down</span>
       </div>
-  
+    </div>
     <div class="mid-container">
       <div class="profile">
         <img src="" alt="">
