comment out mid section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span class="text">Scroll down</span>
       </div>
     </div>
-    <div class="mid-container">
+    <!-- <div class="mid-container">
       <div class="profile">
         <img src="" alt="">
         <h2>Hello.</h2>
@@ -66,6 +66,6 @@
         <p class="contact-message">Love hot wings,,,</p>
         <a class="btn" href="mailto:shawn.gu.92@gmail.com">CONTACT ME</a>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
