--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="top-container">
       <h1>Shawn Gu</h1>
       <h5>A Computer Science Student</h5>
-      <h5>Seeking for Software Development Intern</h5>
+      <h5>Seeking for Software Development / Back End Intern</h5>
       
     </div>
     <div class="scroll-wrapper">
