--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         <span class="text">Scroll down</span>
       </div>
     </div>
-    <!-- <div class="mid-container">
+    <div class="mid-container">
       <div class="profile">
-        <img src="" alt="">
-        <h2>Hello.</h2>
-        <p>1233211123321</p>
+        <!-- <img src="" alt=""> -->
+        <h2>PROJECT ON GOING</h2>
+        <!-- <p>1233211123321</p> -->
       </div>
     
-      <hr>
+      <!-- <hr>
       <div class="skills">
         <h3>My Skills</h3>
         <div class="skill-row">
@@ -65,7 +65,7 @@
         <h4>If you love hot wings as much as I do.</h4>
         <p class="contact-message">Love hot wings,,,</p>
         <a class="btn" href="mailto:shawn.gu.92@gmail.com">CONTACT ME</a>
-      </div>
-    </div> -->
+      </div> -->
+    </div>
   </body>
 </html>
