--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h5>Seeking for Software Development / Back End Intern</h5>
       
     </div>
-    <div class="scroll-wrapper">
+    <!-- <div class="scroll-wrapper">
       <div class=".i--container">
         <div class="scrollcontainer">
           <div class="chevron"></div>
@@ -35,7 +35,7 @@
         </div>
         <span class="text">Scroll down</span>
       </div>
-    </div>
+    </div> -->
     <div class="mid-container">
       <div class="profile">
         <!-- <img src="" alt=""> -->
